Add processing of tags